# licencing-rag

./: .dockerignore  .env.example  .gitignore  .markdownlint.json  .pre-commit-config.yaml  Dockerfile  README.md  SUBDIRECTORY_IMPLEMENTATION.md  docker-compose.yml  main.py  makefile  pyproject.toml
.github/instructions/: copilot-instructions.md
.github/prompts/: commit.prompt.md  unittest.prompt.md
api/: __init__.py  config.py  dependencies.py  exceptions.py  main.py
api/formatters/: __init__.py  slack.py
api/middleware/: __init__.py  auth.py  logging.py  rate_limit.py  request_id.py
api/models/: __init__.py  requests.py  responses.py
api/routes/: __init__.py  health.py  query.py  slack.py  sources.py
app/: __init__.py  __main__.py  audit.py  budget.py  chunking.py  cli.py  config.py  debug.py  definitions.py  embed.py  extract.py  gate.py  ingest.py  llm.py  logging.py  normalize.py  output.py  promps.py  prompts.py  query.py  rerank.py  search.py  validate.py
docs/: audit-logging.md  confidence-gating.md  configuration.md  cost-estimation.md  data-sources.md  debug-mode.md  docker-deployment.md  hybrid-search.md  implementation-plan.md  ingestion.md  query-normalization.md  rag-tutorial.md  reranking.md  specs.v0.2.md
docs/development/: DEVELOPER_GUIDE.md  deployment-implementation-plan.md  deployment-specs.md  implementation-plan.md  rag.requirement.md  rag.specs.md  specs.v0.1.md  specs.v0.2.md  specs.v0.3.md  specs.v0.4.md
docs/sources/: cme.md  cta-utp.md  opra.md
eval/: EVALUATION_SUMMARY.md  questions.json  run_eval.py
tests/: conftest.py  test_api_auth.py  test_api_errors.py  test_api_health.py  test_api_rate_limit.py  test_api_slack.py  test_audit.py  test_budget.py  test_chunking.py  test_debug.py  test_definitions.py  test_e2e.py  test_extract.py  test_gate.py  test_hybrid_retrieval.py  test_ingest.py  test_normalize.py  test_output.py  test_prompts.py  test_query.py  test_rerank.py  test_search.py  test_subdirectories.py  test_validate.py
tests/fixtures/subdir_test/Agreements/: sample-agreement.docx
