[project]
name = "licencing-rag"
version = "0.2.0"
description = "Local RAG system for license agreement analysis"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.76.0",
    "chromadb>=1.4.1",
    "ollama>=0.6.1",
    "pymupdf>=1.26.7",
    "python-docx>=1.2.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "isort>=7.0.0",
    "mdformat>=1.0.0",
    "mdformat-gfm>=1.0.0",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "ruff>=0.14.14",
]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.isort]
profile = "black"
line_length = 120
force_single_line = true
