[project]
name = "licencing-rag"
version = "0.4.0"
description = "OpenAI RAG system for license agreement analysis"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.4.1",
    "openai>=1.0.0",
    "pymupdf>=1.26.7",
    "python-docx>=1.2.0",
    "rank-bm25>=0.2.2",
    "rich>=14.0.0",
    "structlog>=25.5.0",
    "tiktoken>=0.9.0",
    "tqdm>=4.67.1",
]

[project.scripts]
rag = "app.cli:cli_main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[dependency-groups]
dev = [
    "isort>=7.0.0",
    "mdformat>=1.0.0",
    "mdformat-gfm>=1.0.0",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.14.14",
]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.isort]
profile = "black"
line_length = 120
force_single_line = true
